<resources>
    <string name="app_name">FirebaseDB</string>
    <string name="username_log">Email ID</string>
    <string name="password_log">Password</string>
    <string name="loginbut">Login</string>
    <string name="new_user_signup">New User? Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="submit_reg">Submit</string>
    <string name="already_a_user_login">Already a User? Login</string>
    <string name="email_reset">Email</string>
    <string name="reset_but">Reset</string>
    <string name="logout">LOGOUT</string>
    <string name="display_details">Display details</string>
    <string name="update">UPDATE</string>
    <string name="logout_2">LOGOUT</string>
    <string name="contact_upd">Contact</string>
    <string name="update_now">Update</string>
    <string name="change_email_id">Change Email ID</string>
    <string name="change">Change</string>
</resources>
